--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,7 @@
                     <ul class="md.5:inline-flex md.5:gap-6 lg:gap-12 text-secondary font-secondary relative top-[57px] xl:text-lg">
                         <li><a href={{ path('home') }} class="active">Accueil</a></li>
                         <li><a href={{ path('card') }}>Carte</a></li>
-                        <li><a href="">Réserver</a></li>
+                        <li><a href={{ path('booking') }}>Réserver</a></li>
                         <li><a href="">Contact</a></li>
                         <li><a href="">Connexion</a></li>
                         <li><a href="">Inscription</a></li>
