--- a/templates/Booking/booking.html.twig
+++ b/templates/Booking/booking.html.twig
@@ -10,27 +10,24 @@
         <img src={{ asset('images/svg/'~ "line-white.svg") }} alt="un point entouré de deux traits de longeur égales" class="w-[100px]">
     </div>
     <section>
-        <div>
-            <div>
-                <p>Envie d'aller plus vite ?</p>
-                <div>
-                    <div><a href=""></a></div>
-                    <p>ou</p>
-                    <div><a href=""></a></div>
-                </div>
-                {# <picture>
+        <div class="min-w-[264px] text-secondary font-secondary w-11/12 mx-auto py-6">
+            <div class="min-h-[295px] relative text-xl flex">
+                <picture>
                     <source srcset={{ asset('images/booking/'~"booking-extraLarge.jpg") }} media="(min-width : 1200px)">
                     <source srcset={{ asset('images/booking/'~"booking-large.jpg") }} media="(min-width : 990px)">
                     <source srcset={{ asset('images/booking/'~"booking-medium.jpg") }} media="(min-width : 768px)">
-                    <img src={{ asset('images/booking/'~'booking-small.jpg')}} alt="Demi-camembert roti sur lit de salade">
-                </picture> #}
+                    <img src={{ asset('images/booking/'~'booking-small.jpg')}} alt="Assiettes servies avec une salade et un verre à pied." class="w-full h-full blur-[1px] absolute object-center object-cover -z-10">
+                </picture>
+                <p class="w-full py-4 absolute text-center">Envie d'aller plus vite ?</p>
+                <div class="flex flex-col gap-3 relative justify-center w-full">
+                    <div class="choice_buttons"><a href="">Inscrivez vous</a></div>
+                    <p class="text-center">Ou</p>
+                    <div class="choice_buttons"><a href="">Connectez vous</a></div>
+                </div>
             </div>
             <div class="booking-carousel">
-                <div>
-                    
-                </div>
-                <div></div>
-                <div></div>
+                {% block form %}
+                {% endblock %}
             </div>
         </div>
     </section>
