--- a/templates/Card/card.html.twig
+++ b/templates/Card/card.html.twig
@@ -63,7 +63,7 @@
                     </li>
                 </ul>
             </section>
-            <div class="h-[42px] w-[200px] bg-secondary drop-shadow-lg mx-auto cursor-pointer flex items-center justify-center hover:bg-400 group duration-150 md:w-[350px] md:h-[70px] md:text-1.5xl" id="card-booking"><a href="" class="text-primary font-secondary group-hover:text-secondary duration-150">Réservez maintenant !</a></div>
+            <div class="white-button h-[42px] w-[200px] mx-auto cursor-pointer flex items-center justify-center group duration-150 md:w-[350px] md:h-[70px] md:text-1.5xl" id="card-booking"><a href="" class="text-primary font-secondary group-hover:text-secondary duration-150">Réservez maintenant !</a></div>
         </div>
         {% endblock %}
     </main>
