--- a/templates/Booking/booking.html.twig
+++ b/templates/Booking/booking.html.twig
@@ -25,7 +25,7 @@
                     <div class="choice_buttons"><a href="">Connectez vous</a></div>
                 </div>
             </div>
-            <div class="booking-carousel">
+            <div class="form-booking_container">
                 {% block form %}
                 {% endblock %}
             </div>
