--- a/templates/Booking/Informations/informations.html.twig
+++ b/templates/Booking/Informations/informations.html.twig
@@ -19,7 +19,7 @@
                     <i class="fa-solid fa-utensils"></i>
                     {{ form_widget(informations.person)}}
                 </div>
-                <p class="text-sm">*Pour une réservation de plus de 20 personnes merci de nous appeler ou de nous contacter ici</p>
+                <p class="text-sm lg:text-lg">*Pour une réservation de plus de 20 personnes merci de nous appeler ou de nous contacter ici</p>
             </div>
         </div>
         <div class="radio_container">
@@ -40,3 +40,4 @@
 
 {{ form_end(informations) }}
 {% endblock %}
+
