--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,7 +23,7 @@
                 <a href="{{ path('home') }}" class=""><img src={{ asset('images/svg/'~ "logo-white.svg")}} alt="Logo Quai Antique blanc" class="h-full"></a>
                 <button class="md.5:hidden"><img src={{ asset('images/svg/'~ "hamburger-open.svg") }} alt="Open menu"></button>
                 <nav class="hidden md.5:block uppercase"> 
-                    <ul class="md.5:inline-flex md.5:gap-6 lg:gap-12 text-secondary font-secondary relative top-[57px] xl:text-lg">
+                    <ul class="md.5:inline-flex md.5:gap-6 lg:gap-12 text-secondary font-secondary relative top-[57px] text-sm">
                         <li><a href={{ path('home') }} class="active">Accueil</a></li>
                         <li><a href={{ path('card') }}>Carte</a></li>
                         <li><a href={{ path('booking') }}>Réserver</a></li>
