--- a/templates/Booking/booking.html.twig
+++ b/templates/Booking/booking.html.twig
@@ -35,5 +35,5 @@
 {% endblock %}
 
 {% block scripts %}
-    {# <script src={{ asset('js/card/'~'script-card.js') }}></script> #}
+    <script src={{ asset('js/booking/'~'script-booking.js') }}></script>
 {% endblock %}
