feat: part of the form for booking

--- a/templates/Booking/Informations/informations.html.twig
+++ b/templates/Booking/Informations/informations.html.twig
@@ -41,6 +41,7 @@
             <button id="step-one" class="rounded-full text-1.5xl w-[48px] h-[48px] mt-6 mx-auto white-button flex justify-center items-center" type="button" aria-label="Valider" value=""><i class="fa-solid fa-check"></i></button>
         </div>
         <div class="booking_step-two">
+        {{ form_row(informations.date) }}
         </div>
 
     {{ form_end(informations) }}
