--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,7 +27,7 @@
                         <li><a href={{ path('home') }} class="active">Accueil</a></li>
                         <li><a href={{ path('card') }}>Carte</a></li>
                         <li><a href="">Réserver</a></li>
-                        <li><a href="">Contact</a></li>
+                        <li><a href={{ path('contact') }}>Contact</a></li>
                         <li><a href="">Connexion</a></li>
                         <li><a href="">Inscription</a></li>
                     </ul>
