--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,7 +29,7 @@
                         <li><a href="">Réserver</a></li>
                         <li><a href="">Contact</a></li>
                         <li><a href="">Connexion</a></li>
-                        <li><a href{{ path('sign_in') }}>Inscription</a></li>
+                        <li><a href{{ path('sign_up') }}>Inscription</a></li>
                     </ul>
                 </nav>
             </header>
