style: adding button tag to the eye password

--- a/templates/SignUp/sign.html.twig
+++ b/templates/SignUp/sign.html.twig
@@ -28,7 +28,7 @@
                             <div class="inputContainer_sign-in">
                                 <i class="fa-solid fa-lock"></i>
                                 {{ form_widget(form.password) }}
-                                <i class="fa-solid fa-eye"></i>
+                                <button><i class="fa-solid fa-eye"></i></button>
                                 {# <i class="fa-solid fa-eye-slash"></i> #}
                             </div>
                             <div>
@@ -40,7 +40,7 @@
                             <div class="inputContainer_sign-in">
                                 <i class="fa-solid fa-lock"></i>
                                 {{ form_widget(form.confirm) }}
-                                <i class="fa-solid fa-eye"></i>
+                                <button><i class="fa-solid fa-eye"></i></button>
                             </div>
                             <div>
                                 {{ form_errors(form.confirm)}}
