--- a/templates/SignUp/sign.html.twig
+++ b/templates/SignUp/sign.html.twig
@@ -14,3 +14,7 @@
         {% endblock %}
     </main>
 {% endblock %}
+{% block scripts %}
+<script src={{ asset('js/signUp-login/'~'script-eye.js') }}></script>
+
+{% endblock %}
