--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,7 +28,7 @@
                         <li><a href={{ path('card') }}>Carte</a></li>
                         <li><a href="">Réserver</a></li>
                         <li><a href={{ path('contact') }}>Contact</a></li>
-                        <li><a href="">Connexion</a></li>
+                        <li><a href={{ path('login') }}>Connexion</a></li>
                         <li><a href={{ path('sign_up') }}>Inscription</a></li>
                     </ul>
                 </nav>
