--- a/templates/Login/login.html.twig
+++ b/templates/Login/login.html.twig
@@ -3,20 +3,19 @@
 {% block title %}Connexion{% endblock %}
 
 {% block body %}
-    {% if error %}
-        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
-
-    <form action="{{ path('login') }}" method="post">
-        <label for="username">Email:</label>
-        <input type="text" id="username" name="_username" value="{{ last_email }}">
-
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="_password">
-
-        {# If you want to control the URL the user is redirected to on success
-        <input type="hidden" name="_target_path" value="/account"> #}
-
-        <button type="submit">login</button>
-    </form>
+    <main class="pt-28 flex flex-col justify-evenly form_main" id="login">
+        <div class="title_container bg-primary">
+            <h1 class="title_section">Connexion</h1>
+            <img src={{ asset('images/svg/'~ "line-white.svg") }} alt="un point entouré de deux traits de longeur égales" class="w-[100px]">
+            {% block signUp_title %}
+            {% endblock %}
+        </div>
+        {% block content %}
+        {% endblock %}
+    </main>
+    
 {% endblock %}
+{% block scripts %}
+<script src={{ asset('js/signUp-login/'~'script-eye.js') }}></script>
+{% endblock %}
+     
