--- a/templates/Login/login.form.html.twig
+++ b/templates/Login/login.form.html.twig
@@ -27,10 +27,15 @@
                             </span>
                         </div>
                     </div>
-
+                    <div class="flex flex-col md:flex-row md:items-center justify-between">
+                        <label >
+                            <input class="mr-2" type="checkbox" name="_remember_me" checked/> Se souvenir de moi
+                        </label>
+                        <a href={{ path('app_forgot_password_request') }} class="text-sm">Mot de passe oublié ?</a>
+                    </div>
                     {# If you want to control the URL the user is redirected to on success
                     <input type="hidden" name="_target_path" value="/account"> #}
-                        <button type="submit" class=" bg-secondary text-primary mt-4 mb-2 py-2 px-4 w-fit justify-self-center hover:bg-400 duration-150 hover:text-secondary">Se connecter</button>
+                    <button type="submit" class=" bg-secondary text-primary mt-4 mb-2 py-2 px-4 w-fit justify-self-center hover:bg-400 duration-150 hover:text-secondary">Se connecter</button>
                 </form>
             </div>
             <div class="bg-400 text-center py-5 text-primary lg:h-[30%] lg:flex lg:flex-col lg:justify-center">
