--- a/templates/SignUp/form/signUp.form.html.twig
+++ b/templates/SignUp/form/signUp.form.html.twig
@@ -1,9 +1,11 @@
 {% extends 'signUp/sign.html.twig' %}
 
-{% block signUp_title %}
+{% block content_subtitle %}
     <div class="font-secondary text-secondary text-center my-5 text-lg px-4 md:text-xl">
-        <p>Envie de devenir un habitué ?</p>
-        <p>Alors inscrivez vous !</p>
+        <h2>
+            <p>Envie de devenir un habitué ?</p>
+            <p>Alors inscrivez vous !</p>
+        </h2>
     </div>
 {% endblock %}
 {% block content %}
