--- a/templates/SignUp/sign.html.twig
+++ b/templates/SignUp/sign.html.twig
@@ -7,7 +7,7 @@
         <div class="title_container bg-primary">
             <h1 class="title_section">Inscription</h1>
             <img src={{ asset('images/svg/'~ "line-white.svg") }} alt="un point entouré de deux traits de longeur égales" class="w-[100px]">
-            {% block signUp_title %}
+            {% block content_subtitle %}
             {% endblock %}
         </div>
         {% block content %}
